bpo-34066: Disabled interruption before SETUP_WITH and BEFORE_ASYNC_WITH.

This will prevent emitting a resource warning when the execution was
interrupted by Ctrl-C between calling open() and entering a 'with' block
in "with open()".